ejemplo/00-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nombre-svc
  namespace: nombre-namespace
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: aplicacion
