ejemplo/01-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nombre-ingress
  namespace: nombre-namespace 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - aplicacion.hostname.com
    secretName: blog-tls
  rules:
  - host: aplicacion.hostname.com
    http:
      paths:
      - backend:
          serviceName: nombre-svc 
          servicePort: 8080
